--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "ng-zorro-antd": "^15.1.0",
+    "ngx-bootstrap": "^10.2.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
     "rxjs": "~7.5.0",
@@ -38,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "2.8.8",
     "typescript": "~4.8.2"
   }
 }
